# nrf52832-earing

./: CMakeLists.txt  LICENSE  nrf52dk_nrf52832.overlay  prj.conf
inc/: ble.h  ble_gap.h  ble_gatt.h  ble_gatt_format_type.h  cpp_main.h  gpio.h  gpio_base.h  gpio_interrupt.h  pwm.h  rgb_led.h  temp_sensor.h
src/: ble.cpp  ble_gap.cpp  ble_gatt.cpp  cpp_main.cpp  gpio.cpp  gpio_base.cpp  gpio_interrupt.cpp  main.c  pwm.cpp  rgb_led.cpp  temp_sensor.cpp
